--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,9 @@ anthropic==0.43.0
 redis==5.2.1
 sqlalchemy==2.0.36
 asyncpg==0.30.0
+psycopg2-binary==2.9.10
 alembic==1.14.0
+greenlet==3.1.1
 
 # Security & Rate Limiting
 slowapi==0.1.9
