Add references to implement agent-memory in future

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 # Anthropic API
 ANTHROPIC_API_KEY=your_anthropic_api_key_here
 
+# Open AI (for embeddings)
+OPENAI_API_KEY=your_openai_api_key_here
+
 # Redis Configuration
 REDIS_URL=redis://localhost:6379/0
 
